--- a/weather_system/weather_app/templates/index.html
+++ b/weather_system/weather_app/templates/index.html
@@ -2,14 +2,23 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="utf-8">
-  <title>USA Population Estimates (2012) - Apache ECharts Demo</title>
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" href="data:,">
+    <meta charset="utf-8">
+    <title>USA Population Estimates (2012) - Apache ECharts Demo</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <style>
+        body {
+            height: 100%;
+            width: 100%;
+            justify-content: center; /* 水平居中 */
+            align-items: center; /* 垂直居中 */
+        }
+    </style>
 </head>
 <body>
-  <div id="chart-container"></div>
-  <script src="https://echarts.apache.org/zh/js/vendors/jquery@3.7.1/dist/jquery.min.js"></script>
-  <script src="https://echarts.apache.org/zh/js/vendors/echarts/dist/echarts.min.js"></script>
-  <script src="{% static 'js/index.js' %}"></script>
+    <div id="chart-container"></div>
+    <script src="https://echarts.apache.org/zh/js/vendors/jquery@3.7.1/dist/jquery.min.js"></script>
+    <script src="{% static 'js/echarts.min.js' %}"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 </html>
