update index.html, index.js, views.py

--- a/weather_system/weather_app/templates/index.html
+++ b/weather_system/weather_app/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" href="data:,">
     <meta charset="utf-8">
-    <title>USA Population Estimates (2012) - Apache ECharts Demo</title>
+    <title>China Population Estimates (2012)</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
