--- a/weather_system/weather_app/templates/index.html
+++ b/weather_system/weather_app/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="chart-container"></div>
-    <script src="https://echarts.apache.org/zh/js/vendors/jquery@3.7.1/dist/jquery.min.js"></script>
+    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'js/echarts.min.js' %}"></script>
     <script src="{% static 'js/index.js' %}"></script>
 </body>
