--- a/weather_system/weather_app/static/css/style.css
+++ b/weather_system/weather_app/static/css/style.css
@@ -3,10 +3,102 @@
     padding: 0;
 }
 
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0f0f0;
+}
+
+.top {
+    display: flex;
+    align-items: center; /* 垂直居中 */
+    justify-content: space-between; /* 左右分布（也可用 flex-start 等）*/
+    padding: 0 20px;
+    height: 60px;
+}
+
+.slider-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; /* 改为靠右对齐 */
+    width: 100%;
+    max-width: 20vw;
+    min-width: 200px;
+    align-self: flex-end; /* 让容器本身靠右 */
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 25vw;
+}
+
+.title {
+    display: flex;
+    align-items: flex-end;
+    width: 15vw;
+    max-width: 20vw;
+    align-self: flex-start;
+    margin-top: 20px;
+    margin-right: 25vw;
+    margin-left: 50px;
+}
+
+.title span {
+    font-weight: bold;
+    min-width: 200px;
+    color: #555555;
+}
+
+.slider-label {
+    display: flex;
+    justify-content: space-between;
+    max-width: 200px; /* 限制标签宽度 */
+    font-weight: bold;
+    color: #555;
+}
+
+.slider-label span{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.slider {
+    width: 100%;
+    max-width: 200px; /* 限制滑块宽度 */
+    height: 15px;
+    -webkit-appearance: none;
+    appearance: none;
+    background: #d3d3d3;
+    outline: none;
+    border-radius: 10px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.slider::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+    border: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 #chart-container {
     position: relative;
-    width: 80%;
-    height: 80vh;
-    margin: 10vh auto;
+    width: 100vh;
+    height: 90vh;
     overflow: hidden;
 }
